--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "type": "git",
     "url": "https://github.com/a-guerrero/platformer"
   },
-  "scripts": {
-  },
-  "dependencies": {
+  "scripts": {},
+  "dependencies": {},
+  "devDependencies": {
+    "ts-loader": "^1.3.3",
+    "typescript": "^2.1.4",
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
   }
 }
