--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "type": "git",
     "url": "https://github.com/a-guerrero/platformer"
   },
-  "scripts": {},
+  "scripts": {
+    "build-css": "node-sass src/styles --include-path ./node_modules/bourbon/app/assets/stylesheets --source-map build/styles/maps -o build/styles",
+    "build-css:prod": "node-sass src/styles --include-path ./node_modules/bourbon/app/assets/stylesheets -o build/styles"
+  },
   "dependencies": {},
   "devDependencies": {
+    "bourbon": "^4.2.7",
+    "node-sass": "^4.0.0",
     "ts-loader": "^1.3.3",
     "typescript": "^2.1.4",
     "webpack": "^1.14.0",
