--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "node-sass": "^4.0.0",
     "ts-loader": "^1.3.3",
     "typescript": "^2.1.4",
-    "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2"
+    "webpack": "^1.14.0"
   }
 }
