--- a/package.json
+++ b/package.json
@@ -11,13 +11,20 @@
     "url": "https://github.com/a-guerrero/platformer"
   },
   "scripts": {
-    "build-css": "node-sass src/styles --include-path ./node_modules/bourbon/app/assets/stylesheets --source-map build/styles/maps -o build/styles",
-    "build-css:prod": "node-sass src/styles --include-path ./node_modules/bourbon/app/assets/stylesheets -o build/styles"
+    "browsersync": "browser-sync start -s \"build\" -f \"build\"",
+    "sass": "node-sass src/styles --include-path ./node_modules/bourbon/app/assets/stylesheets --source-map build/styles/maps -o build/styles",
+    "sass:prod": "node-sass src/styles --include-path ./node_modules/bourbon/app/assets/stylesheets --output-style compressed -o build/styles",
+    "sass:watch": "onchange \"src/styles/*{sass,scss}\" -- npm run build-css",
+    "build": "run-p build-css",
+    "watch": "run-p browsersync watch-css",
+    "serve": "run-s build-all watch-all"
   },
-  "dependencies": {},
   "devDependencies": {
     "bourbon": "^4.2.7",
+    "browser-sync": "^2.18.5",
     "node-sass": "^4.0.0",
+    "npm-run-all": "^3.1.2",
+    "onchange": "^3.2.0",
     "ts-loader": "^1.3.3",
     "typescript": "^2.1.4",
     "webpack": "^1.14.0"
