--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
         "forceConsistentCasingInFileNames": true,
         "module": "amd",
-        "target": "ES5"
+        "target": "ES5",
+        "sourceMap": true
     },
     "exclude": [
         "node_modules"
