chore(node): add package npm scripts: - clean build - clean, copy, update, watch assets

--- a/package.json
+++ b/package.json
@@ -12,6 +12,23 @@
   },
   "scripts": {
     "browsersync": "browser-sync start -s \"build\" -f \"build\"",
+    "clean:build": "rimraf build",
+    "clean:audios": "rimraf build/assets/audios",
+    "clean:images": "rimraf build/assets/images",
+    "clean:vendor": "rimraf build/assets/vendor",
+    "clean:videos": "rimraf build/assets/videos",
+    "copy:audios": "copy \"src/assets/audios/**/*.{mp3,ogg,ogm,ogv,wav}\" \"build/assets/audios\"",
+    "copy:images": "copy \"src/assets/images/**/*.{gif,ico,jpeg,jpg,png,svg,webp}\" \"build/assets/images\"",
+    "copy:vendor": "copy \"src/assets/vendor/**/*.{css,js}\" \"build/assets/vendor\"",
+    "copy:videos": "copy \"src/assets/videos/**/*.{mp4,ogg,ogm,ogv,webm}\" \"build/assets/videos\"",
+    "update:audios": "run-s clean:audios copy:audios",
+    "update:images": "run-s clean:images copy:images",
+    "update:vendor": "run-s clean:vendor copy:vendor",
+    "update:videos": "run-s clean:videos copy:videos",
+    "watch:audios": "onchange \"src/assets/audios/**/*.{mp3,ogg,ogm,ogv,wav}\" -- npm run update:audios",
+    "watch:images": "onchange \"src/assets/images/**/*.{gif,ico,jpeg,jpg,png,svg,webp}\" -- npm run update:images",
+    "watch:vendor": "onchange \"src/assets/vendor/**/*.{css,js}\" -- npm run update:vendor",
+    "watch:videos": "onchange \"src/assets/videos/**/*.{mp4,ogg,ogm,ogv,webm}\" -- npm run update:videos",
     "pug": "pug src/*.pug -P -o build",
     "pug:prod": "pug src/*.pug -o build",
     "pug:watch": "onchange \"src/*.pug\" -- npm run pug",
@@ -21,20 +38,22 @@
     "webpack": "webpack",
     "webpack:prod": "cross-env NODE_ENV=production webpack",
     "webpack:watch": "onchange \"src/scripts/*.ts\" -- npm run webpack",
-    "build": "run-p pug sass webpack",
-    "build:prod": " run-p pug:prod sass:prod webpack:prod",
+    "build": "npm-run-all clean -p pug sass webpack",
+    "build:prod": "npm-run-all clean -p pug:prod sass:prod webpack:prod",
     "watch": "run-p browsersync pug:watch sass:watch webpack:watch",
     "serve": "run-s build watch"
   },
   "devDependencies": {
     "bourbon": "^4.2.7",
     "browser-sync": "^2.18.5",
+    "copy": "^0.3.0",
     "cross-env": "^3.1.3",
     "node-sass": "^4.0.0",
     "npm-run-all": "^3.1.2",
     "onchange": "^3.2.0",
     "pug": "^2.0.0-beta6",
     "pug-cli": "^1.0.0-alpha6",
+    "rimraf": "^2.5.4",
     "ts-loader": "^1.3.3",
     "typescript": "^2.1.4",
     "webpack": "^1.14.0"
