chore(node): normalize package npm scripts names

--- a/package.json
+++ b/package.json
@@ -29,19 +29,19 @@
     "watch:images": "onchange \"src/assets/images/**/*.{gif,ico,jpeg,jpg,png,svg,webp}\" -- npm run update:images",
     "watch:vendor": "onchange \"src/assets/vendor/**/*.{css,js}\" -- npm run update:vendor",
     "watch:videos": "onchange \"src/assets/videos/**/*.{mp4,ogg,ogm,ogv,webm}\" -- npm run update:videos",
-    "pug": "pug src/*.pug -P -o build",
-    "pug:prod": "pug src/*.pug -o build",
-    "pug:watch": "onchange \"src/*.pug\" -- npm run pug",
-    "sass": "node-sass src/styles --include-path ./node_modules/bourbon/app/assets/stylesheets --source-map build/styles/maps -o build/styles",
-    "sass:prod": "node-sass src/styles --include-path ./node_modules/bourbon/app/assets/stylesheets --output-style compressed -o build/styles",
-    "sass:watch": "onchange \"src/styles/*.{sass,scss}\" -- npm run sass",
-    "webpack": "webpack",
-    "webpack:prod": "cross-env NODE_ENV=production webpack",
-    "webpack:watch": "onchange \"src/scripts/*.ts\" -- npm run webpack",
-    "build": "npm-run-all clean -p pug sass webpack",
-    "build:prod": "npm-run-all clean -p pug:prod sass:prod webpack:prod",
-    "watch": "run-p browsersync pug:watch sass:watch webpack:watch",
-    "serve": "run-s build watch"
+    "build:pug": "pug src/*.pug -P -o build",
+    "build-prod:pug": "pug src/*.pug -o build",
+    "watch:pug": "onchange \"src/*.pug\" -- npm run build:pug",
+    "build:sass": "node-sass src/styles --include-path ./node_modules/bourbon/app/assets/stylesheets --source-map build/styles/maps -o build/styles",
+    "build-prod:sass": "node-sass src/styles --include-path ./node_modules/bourbon/app/assets/stylesheets --output-style compressed -o build/styles",
+    "watch:sass": "onchange \"src/styles/*.{sass,scss}\" -- npm run build:sass",
+    "build:webpack": "webpack",
+    "build-prod:webpack": "cross-env NODE_ENV=production webpack",
+    "watch:webpack": "onchange \"src/scripts/*.ts\" -- npm run build:webpack",
+    "build": "npm-run-all clean:build -p copy:* build:*",
+    "build-prod": "npm-run-all clean:build -p copy:* build-prod:*",
+    "watch": "run-p watch:*",
+    "serve": "npm-run-all build -p watch browsersync"
   },
   "devDependencies": {
     "bourbon": "^4.2.7",
