chore(node): package npm script improvements: - normalize paths (with escaped double quotes if possible) - normalize use of npm-run-all - rename browsersync scripts to shorter bs - rename serve script to start

--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
     "url": "https://github.com/a-guerrero/platformer"
   },
   "scripts": {
-    "browsersync": "browser-sync start -s \"build\" -f \"build\"",
-    "clean:build": "rimraf build",
-    "clean:audios": "rimraf build/assets/audios",
-    "clean:images": "rimraf build/assets/images",
-    "clean:vendor": "rimraf build/assets/vendor",
-    "clean:videos": "rimraf build/assets/videos",
+    "bs": "browser-sync start -s \"build\" -f \"build\"",
+    "bs:reload": "browser-sync reload",
+    "clean:build": "rimraf \"build\"",
+    "clean:audios": "rimraf \"build/assets/audios\"",
+    "clean:images": "rimraf \"build/assets/images\"",
+    "clean:vendor": "rimraf \"build/assets/vendor\"",
+    "clean:videos": "rimraf \"build/assets/videos\"",
     "copy:audios": "copy \"src/assets/audios/**/*.{mp3,ogg,ogm,ogv,wav}\" \"build/assets/audios\"",
     "copy:images": "copy \"src/assets/images/**/*.{gif,ico,jpeg,jpg,png,svg,webp}\" \"build/assets/images\"",
     "copy:vendor": "copy \"src/assets/vendor/**/*.{css,js}\" \"build/assets/vendor\"",
     "copy:videos": "copy \"src/assets/videos/**/*.{mp4,ogg,ogm,ogv,webm}\" \"build/assets/videos\"",
-    "update:audios": "run-s clean:audios copy:audios",
-    "update:images": "run-s clean:images copy:images",
-    "update:vendor": "run-s clean:vendor copy:vendor",
-    "update:videos": "run-s clean:videos copy:videos",
+    "update:audios": "npm-run-all -s clean:audios copy:audios bs:reload",
+    "update:images": "npm-run-all -s clean:images copy:images bs:reload",
+    "update:vendor": "npm-run-all -s clean:vendor copy:vendor bs:reload",
+    "update:videos": "npm-run-all -s clean:videos copy:videos bs:reload",
     "watch:audios": "onchange \"src/assets/audios/**/*.{mp3,ogg,ogm,ogv,wav}\" -- npm run update:audios",
     "watch:images": "onchange \"src/assets/images/**/*.{gif,ico,jpeg,jpg,png,svg,webp}\" -- npm run update:images",
     "watch:vendor": "onchange \"src/assets/vendor/**/*.{css,js}\" -- npm run update:vendor",
@@ -32,16 +33,16 @@
     "build:pug": "pug src/*.pug -P -o build",
     "build-prod:pug": "pug src/*.pug -o build",
     "watch:pug": "onchange \"src/*.pug\" -- npm run build:pug",
-    "build:sass": "node-sass src/styles --include-path ./node_modules/bourbon/app/assets/stylesheets --source-map build/styles/maps -o build/styles",
-    "build-prod:sass": "node-sass src/styles --include-path ./node_modules/bourbon/app/assets/stylesheets --output-style compressed -o build/styles",
+    "build:sass": "node-sass \"src/styles\" --include-path \"./node_modules/bourbon/app/assets/stylesheets\" --source-map \"build/styles/maps\" -o \"build/styles\"",
+    "build-prod:sass": "node-sass \"src/styles\" --include-path \"./node_modules/bourbon/app/assets/stylesheets\" --output-style compressed -o \"build/styles\"",
     "watch:sass": "onchange \"src/styles/*.{sass,scss}\" -- npm run build:sass",
     "build:webpack": "webpack",
     "build-prod:webpack": "cross-env NODE_ENV=production webpack",
     "watch:webpack": "onchange \"src/scripts/*.ts\" -- npm run build:webpack",
     "build": "npm-run-all clean:build -p copy:* build:*",
     "build-prod": "npm-run-all clean:build -p copy:* build-prod:*",
-    "watch": "run-p watch:*",
-    "serve": "npm-run-all build -p watch browsersync"
+    "watch": "npm-run-all -p watch:*",
+    "start": "npm-run-all build -p watch bs"
   },
   "devDependencies": {
     "bourbon": "^4.2.7",
