--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "watch:images": "onchange \"src/assets/images/**/*.{gif,ico,jpeg,jpg,png,svg,webp}\" -- npm run update:images",
     "watch:vendor": "onchange \"src/assets/vendor/**/*.{css,js}\" -- npm run update:vendor",
     "watch:videos": "onchange \"src/assets/videos/**/*.{mp4,ogg,ogm,ogv,webm}\" -- npm run update:videos",
-    "build:pug": "pug src/*.pug -P -o build",
-    "build-prod:pug": "pug src/*.pug -o build",
-    "watch:pug": "onchange \"src/*.pug\" -- npm run build:pug",
+    "build:pug": "pug src -P -o build",
+    "build-prod:pug": "pug src -o build",
+    "watch:pug": "onchange \"src/**/*.pug\" -- npm run build:pug",
     "build:sass": "node-sass \"src/styles\" --include-path \"./node_modules/bourbon/app/assets/stylesheets\" --source-map \"build/styles/maps\" -o \"build/styles\"",
     "build-prod:sass": "node-sass \"src/styles\" --include-path \"./node_modules/bourbon/app/assets/stylesheets\" --output-style compressed -o \"build/styles\"",
     "watch:sass": "onchange \"src/styles/*.{sass,scss}\" -- npm run build:sass",
