chore(node): update src & build to app & dist

--- a/package.json
+++ b/package.json
@@ -11,36 +11,36 @@
     "url": "https://github.com/a-guerrero/platformer"
   },
   "scripts": {
-    "bs": "browser-sync start -s \"build\" -f \"build\"",
+    "bs": "browser-sync start -s \"dist\" -f \"dist\"",
     "bs:reload": "browser-sync reload",
-    "clean:build": "rimraf \"build\"",
-    "clean:audios": "rimraf \"build/assets/audios\"",
-    "clean:images": "rimraf \"build/assets/images\"",
-    "clean:vendor": "rimraf \"build/assets/vendor\"",
-    "clean:videos": "rimraf \"build/assets/videos\"",
-    "copy:audios": "copy \"src/assets/audios/**/*.{mp3,ogg,ogm,ogv,wav}\" \"build/assets/audios\"",
-    "copy:images": "copy \"src/assets/images/**/*.{gif,ico,jpeg,jpg,png,svg,webp}\" \"build/assets/images\"",
-    "copy:vendor": "copy \"src/assets/vendor/**/*.{css,js}\" \"build/assets/vendor\"",
-    "copy:videos": "copy \"src/assets/videos/**/*.{mp4,ogg,ogm,ogv,webm}\" \"build/assets/videos\"",
+    "clean:dist": "rimraf \"dist\"",
+    "clean:audios": "rimraf \"dist/assets/audios\"",
+    "clean:images": "rimraf \"dist/assets/images\"",
+    "clean:vendor": "rimraf \"dist/assets/vendor\"",
+    "clean:videos": "rimraf \"dist/assets/videos\"",
+    "copy:audios": "copy \"app/assets/audios/**/*.{mp3,ogg,ogm,ogv,wav}\" \"dist/assets/audios\"",
+    "copy:images": "copy \"app/assets/images/**/*.{gif,ico,jpeg,jpg,png,svg,webp}\" \"dist/assets/images\"",
+    "copy:vendor": "copy \"app/assets/vendor/**/*.{css,js}\" \"dist/assets/vendor\"",
+    "copy:videos": "copy \"app/assets/videos/**/*.{mp4,ogg,ogm,ogv,webm}\" \"dist/assets/videos\"",
     "update:audios": "npm-run-all -s clean:audios copy:audios bs:reload",
     "update:images": "npm-run-all -s clean:images copy:images bs:reload",
     "update:vendor": "npm-run-all -s clean:vendor copy:vendor bs:reload",
     "update:videos": "npm-run-all -s clean:videos copy:videos bs:reload",
-    "watch:audios": "onchange \"src/assets/audios/**/*.{mp3,ogg,ogm,ogv,wav}\" -- npm run update:audios",
-    "watch:images": "onchange \"src/assets/images/**/*.{gif,ico,jpeg,jpg,png,svg,webp}\" -- npm run update:images",
-    "watch:vendor": "onchange \"src/assets/vendor/**/*.{css,js}\" -- npm run update:vendor",
-    "watch:videos": "onchange \"src/assets/videos/**/*.{mp4,ogg,ogm,ogv,webm}\" -- npm run update:videos",
-    "build:pug": "pug src -P -o build",
-    "build-prod:pug": "pug src -o build",
-    "watch:pug": "onchange \"src/**/*.pug\" -- npm run build:pug",
-    "build:sass": "node-sass \"src/styles\" --include-path \"./node_modules/bourbon/app/assets/stylesheets\" --source-map \"build/styles/maps\" -o \"build/styles\"",
-    "build-prod:sass": "node-sass \"src/styles\" --include-path \"./node_modules/bourbon/app/assets/stylesheets\" --output-style compressed -o \"build/styles\"",
-    "watch:sass": "onchange \"src/styles/*.{sass,scss}\" -- npm run build:sass",
+    "watch:audios": "onchange \"app/assets/audios/**/*.{mp3,ogg,ogm,ogv,wav}\" -- npm run update:audios",
+    "watch:images": "onchange \"app/assets/images/**/*.{gif,ico,jpeg,jpg,png,svg,webp}\" -- npm run update:images",
+    "watch:vendor": "onchange \"app/assets/vendor/**/*.{css,js}\" -- npm run update:vendor",
+    "watch:videos": "onchange \"app/assets/videos/**/*.{mp4,ogg,ogm,ogv,webm}\" -- npm run update:videos",
+    "build:pug": "pug app -P -o dist",
+    "build-prod:pug": "pug app -o dist",
+    "watch:pug": "onchange \"app/**/*.pug\" -- npm run build:pug",
+    "build:sass": "node-sass \"app/styles\" --include-path \"./node_modules/bourbon/app/assets/stylesheets\" --source-map \"dist/styles/maps\" -o \"dist/styles\"",
+    "build-prod:sass": "node-sass \"app/styles\" --include-path \"./node_modules/bourbon/app/assets/stylesheets\" --output-style compressed -o \"dist/styles\"",
+    "watch:sass": "onchange \"app/styles/*.{sass,scss}\" -- npm run build:sass",
     "build:webpack": "webpack",
     "build-prod:webpack": "cross-env NODE_ENV=production webpack",
-    "watch:webpack": "onchange \"src/scripts/*.ts\" -- npm run build:webpack",
-    "build": "npm-run-all clean:build -p copy:* build:*",
-    "build-prod": "npm-run-all clean:build -p copy:* build-prod:*",
+    "watch:webpack": "onchange \"app/scripts/*.ts\" -- npm run build:webpack",
+    "build": "npm-run-all clean:dist -p copy:* build:*",
+    "build-prod": "npm-run-all clean:dist -p copy:* build-prod:*",
     "watch": "npm-run-all -p watch:*",
     "start": "npm-run-all build -p watch bs"
   },
