--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "watch:images": "onchange \"app/assets/images/**/*.{gif,ico,jpeg,jpg,png,svg,webp}\" -- npm run update:images",
     "watch:vendor": "onchange \"app/assets/vendor/**/*.{css,js}\" -- npm run update:vendor",
     "watch:videos": "onchange \"app/assets/videos/**/*.{mp4,ogg,ogm,ogv,webm}\" -- npm run update:videos",
-    "build:pug": "pug app -P -o dist",
-    "build-prod:pug": "pug app -o dist",
+    "build:pug": "pug app/*.pug -P -o dist",
+    "build-prod:pug": "pug app/*.pug -o dist",
     "watch:pug": "onchange \"app/**/*.pug\" -- npm run build:pug",
     "build:sass": "node-sass \"app/styles\" --include-path \"./node_modules/bourbon/app/assets/stylesheets\" --source-map \"dist/styles/maps\" -o \"dist/styles\"",
     "build-prod:sass": "node-sass \"app/styles\" --include-path \"./node_modules/bourbon/app/assets/stylesheets\" --output-style compressed -o \"dist/styles\"",
